dep-recreate1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-rec
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-container
          image: amitow/nginx:1.14.1
