istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - shoppingcart
  gateways:
  - shoppingcart-gateway
  http:
  - match:
    - headers:
        end-user:
          exact: emil.koutanov
    route:
    - destination:
        host: shoppingcart
        subset: v3
  - route:
    - destination:
        host: shoppingcart
        subset: v3
      weight: 25
    - destination:
        host: shoppingcart
        subset: v2
      weight: 75
